--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <td>
           <h1>Hung Manh Nguyen</h1>
           <p><em>Electronics Technician at <strong> <a href="https://www.fortresstechnology.com">Fortress Technology</a></strong>.</em></p>
-          <p>I'm a Electronics Technician who want to learn programming so I can make change my career to developer and make more money.</p>
+          <p>I'm an Electronics Technician who want to learn programming so I can make change my career to developer and make more money.</p>
         </td>
       </tr>
     </table>
